--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ body {
     width: 528px;
     height: 581px;
     margin: 0px;
-    padding: 0px;
+    padding: 40px;
     top: 50%;
     left: 50%;
     background-color: #fff;
@@ -241,40 +241,41 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 0;
-    right: 0;
-    margin-top: 8px;
-    margin-right: 8px;
+    top: 8px;
+    right: 8px;
     cursor: pointer;
     background-color: #fff;
     border: 1px solid rgb(0, 0, 0,0.1);
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    transition: var(--trans-dur) var(--trans-time);
+    transition: fill var(--trans-dur) var(--trans-time);
     fill: #000;
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus {
     fill: var(--accent-color);
-    transition: var(--trans-dur) var(--trans-time);
-}
-.order-form {
-    margin-top: 40px;
+    transition: fill var(--trans-dur) var(--trans-time);
 }
 .form-header {
     font-size: 20px;
     font-weight: 700;
     color: var(--title-text-color);
     text-align: center;
-}
-.order-service {
-    padding: 40px;
-    padding-top: 12px;
+    margin-bottom: 12px;
 }
 .form-field {
     position: relative;
     margin-bottom: 10px;
+}
+.form-field .input-icon,
+.form-field .input-icon {
+    transition: fill var(--trans-dur) var(--trans-time);
+}
+.form-field:hover .input-icon,
+.form-field:focus .input-icon {
+    fill: var(--accent-color);
+    transition: fill var(--trans-dur) var(--trans-time);
 }
 .form-input {
     outline: none;
@@ -286,18 +287,17 @@ body {
     border-radius: 4px;
     padding-left: 42px;
 }
-.icon-input {
-    width: 18px;
-    height: 18px;
-    fill: #000;
-}
-.form-field:hover .icon-input,
-.form-field:focus .icon-input {
-    fill: var(--accent-color);
-}
 .form-input:hover,
 .form-input:focus {
     border: 1px solid var(--accent-color);
+    transition: border-color var(--trans-dur) var(--trans-time);
+}
+.form-input:focus-within + .input-icon {
+    fill: var(--accent-color);
+}
+.icon-input {
+    width: 18px;
+    height: 18px;
 }
 .label-text {
     font-size: 12px;
@@ -316,15 +316,16 @@ body {
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    margin-bottom: 20px;
     margin-top: 4px;
     resize: none;
     font-size: 12px;
     color: var(--title-text-color);
+    transition: var(--trans-dur) var(--trans-time);
 }
 .comment-input:hover,
 .comment-input:focus {
     border: 1px solid var(--accent-color);
+    transition: var(--trans-dur) var(--trans-time);
 }
 .comment-input::placeholder {
     font-size: 12px;
@@ -358,21 +359,33 @@ body {
 }
 .check-button {
     text-align: center;
+    margin-bottom: 30px;
 }
 .link-agree {
     color: var(--accent-color);
 }
+.btn-submit-centered {
+    text-align:center;
+}
 .btn-submit {
-    margin-top: 30px;
+    cursor: pointer;
     width: 200px;
-    padding: 10px 52px;
+    height: 50px;
     color: #fff;
     font-size: 16px;
     font-weight: 700;
-    text-align: center;
-    background-color: var(--accent-color);
+    letter-spacing: 0.06em;
+    line-height: 1.88;
+    background-color: #2196F3;
     border-radius: 4px;
     border-style: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: var(--trans-dur) var(--trans-time);
+    margin: 0;
+}
+.btn-submit:hover,
+.btn-submit:focus {
+    background-color: #188CE8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: var(--trans-dur) var(--trans-time);
 }
@@ -425,14 +438,14 @@ body {
 .wedo-thumb > .wedo-label {
     position: absolute;
     background: linear-gradient(to right, rgba(47,48,58,0.8),  rgba(47,48,58,0.8));
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     padding-top: 27px;
     padding-bottom: 27px;
     text-align: center;
     text-transform: uppercase;
     color: #fff;
     bottom: 0px;
-    width:100%;
+    width: 100%;
 }
 /* Team Section */
 .team-bg {
@@ -654,6 +667,9 @@ body {
 }
 .uppercase {
     text-transform: uppercase;
+    font-size: 14px;
+    line-height: 1.14;
+    font-weight: 700;
 }
 .footer-social-item {
     display: flex;
@@ -703,6 +719,7 @@ body {
     align-items: center;
 }
 .input-newsletter {
+    outline: none;
     margin: 0px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -710,10 +727,14 @@ body {
     width: 358px;
     height: 50px;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.6);
+    color: #fff;
     background-color: transparent;
     /* box-shadow: 0px 4px rgba(0, 0, 0, 0.15); */
     margin-right: 12px;
+}
+.input-newsletter::placeholder {
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
 }
 .btn-newsletter-signup {
     cursor: pointer;
@@ -725,6 +746,8 @@ body {
     height: 50px;
     padding: 10px 28px;
     font-weight: 700;
+    letter-spacing: 0.06em;
+    line-height: 1.88;
     color: #fff;
     border-radius: 4px;
     border: none;
@@ -746,10 +769,12 @@ body {
     display: block;
     width: 106px;
     height: 60px;
+    transition: var(--trans-dur) var(--trans-time);
 }
 .icon-client:hover,
 .icon-client:focus {
     fill: var(--accent-color);
+    transition: var(--trans-dur) var(--trans-time);
 }
 .icon-1 {
     display: block;
